// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should handle danger type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(201, 167, 52); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle error type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(191, 36, 36); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle green type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(46, 166, 46); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle info type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(86, 128, 168); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle normal type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease; background-color: rgb(135, 123, 135);"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle purple type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(156, 34, 156); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should handle success type 1`] = `
<div>
  <button
    class="c5-normal-button c5-normal-button-small"
    style="background-color: rgb(27, 204, 74); color: rgb(255, 255, 255); transition: background-color .3s ease, color .3s ease;"
  >
    clickme
  </button>
</div>
`;

exports[`Button should render without crashing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="c5-normal-button c5-normal-button-small"
        style="transition: background-color .3s ease, color .3s ease;"
      >
        clickme
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="c5-normal-button c5-normal-button-small"
      style="transition: background-color .3s ease, color .3s ease;"
    >
      clickme
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
